--- a/01-introjs/index.html
+++ b/01-introjs/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Indroduction à js</h1>
-    <button onclick="alert('Elem HTML: Bonjour')">Click Me</button>
+    <button onclick="(function(e){console.log('bonjour')})()">Click Me</button>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla recusandae vel animi error impedit velit nisi quos magnam iure architecto autem nostrum a facere alias consequuntur, saepe vero iste minima.
     Laboriosam, quam. Fugit quam laudantium impedit nam quisquam ratione? Esse magnam mollitia nemo doloremque ipsam alias, maiores quis deleniti fugiat recusandae magni reprehenderit cum consequatur dolorem, optio dolores beatae natus.
@@ -22,5 +22,6 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam, maxime sit. Aspernatur rerum esse soluta, porro, explicabo tenetur reprehenderit optio, cum deserunt qui enim distinctio quidem facilis adipisci nisi praesentium!</p>
 
     <script src="monscript.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
